--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,9 @@
     "extends": "@tsconfig/node22/tsconfig.json",
     "compilerOptions": {
       "outDir": "./dist",
-      "declaration": true
+      "declaration": true,
+      "strict": true, 
+      "esModuleInterop": true
     },
     "exclude": ["node_modules"],
     "include": ["src/**/*.ts"]
